force-app/main/default/objects/Lead/fields/Referral_for_an_existing_customer__c.field-meta.xml
<CustomField>
    <fullName>Referral_for_an_existing_customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Is this Referral for an existing customer?</description>
    <label>Referral for an existing customer?</label>
    <type>Checkbox</type>
</CustomField>