force-app/main/default/objects/Lead/fields/Referrer_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Email__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Email address of the ANZ Staff who referred the Lead Details to ML</description>
    <inlineHelpText>Enter the email address of the ANZ staff member who referred this Lead</inlineHelpText>
    <label>Referrer Email</label>
    <type>Email</type>
</CustomField>