force-app/main/default/objects/Lead/fields/Referrer_Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Industry_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To capture referrer industry type</description>
    <inlineHelpText>Optional Field to capture the Industry type who referred the Lead</inlineHelpText>
    <label>Referrer Industry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>