force-app/main/default/objects/Lead/fields/Referrer_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Lead__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup to the sender&apos;s lead if the referral from an existing lead</description>
    <label>Referrer Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>