force-app/main/default/objects/Lead/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Name of the ANZ staff not on Salesforce</description>
    <inlineHelpText>Optional Field to capture the ANZ staff who referred the Lead</inlineHelpText>
    <label>Referrer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>