force-app/main/default/objects/Lead/fields/Referrer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Phone__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Work or Mobile# phone of referrer</description>
    <label>Referrer Phone</label>
    <type>Phone</type>
</CustomField>