force-app/main/default/objects/Lead/fields/Referrer_Reportees_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Reportees_Lead__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>My reportees data based on the Referrer (FinServ__ReferredByUser__c) instead of Owner</description>
    <formula>FinServ__ReferredByUser__r.ManagerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Reportees Lead</label>
    <type>Checkbox</type>
</CustomField>