force-app/main/default/objects/Lead/fields/Referrer_Sub_Team__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Sub_Team__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>My Sub Team based on the Referrer (FinServ__ReferredByUser__c) instead of Owner</description>
    <formula>$User.Sub_Team_Code__c = FinServ__ReferredByUser__r.Sub_Team_Code__c 
&amp;&amp; NOT(ISNULL(FinServ__ReferredByUser__r.Sub_Team_Code__c))
&amp;&amp; Referrer_Region_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Sub Team</label>
    <type>Checkbox</type>
</CustomField>