force-app/main/default/objects/Lead/fields/Referrer_Team_Segment__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Team_Segment__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>My Team Segment based on the Referrer (FinServ__ReferredByUser__c) instead of Owner</description>
    <formula>
    IF(
      OR(
          $UserRole.DeveloperName = &apos;SME_NBC_Senior_Manager&apos;, 
          $UserRole.DeveloperName = &apos;AF_Regional_Manager&apos;,
          $UserRole.DeveloperName = &apos;PB_Head_of_Teams&apos;
      ),
      Referrer_Region_Flag__c,
      IF(
        OR(
          $UserRole.DeveloperName = &apos;SME_Head_of_NBC&apos;,
          $UserRole.DeveloperName = &apos;SME_General_Manager&apos;,
          $UserRole.DeveloperName = &apos;AF_General_Manager&apos;,
          $UserRole.DeveloperName = &apos;PB_General_Manager&apos;,
          $UserRole.DeveloperName = &apos;Markets_National_Sales_Director&apos;,
          $UserRole.DeveloperName = &apos;Channel_Segment_Manager&apos;,
          $UserRole.DeveloperName = &apos;Commercial_Operations_Team&apos;,
          $UserRole.DeveloperName = &apos;Credit_Overview_Team&apos;
      ),
      TEXT($User.Commercial_Segment__c) == TEXT(FinServ__ReferredByUser__r.Commercial_Segment__c), 
      IF(
            OR(
              ISPICKVAL($User.Commercial_Segment__c, &apos;AF&apos;), 
              ISPICKVAL($User.Commercial_Segment__c, &apos;SME NBC&apos;),
              ISPICKVAL($User.Commercial_Segment__c, &apos;PB&apos;)
            ),
            Referrer_Sub_Team__c,
            Referrer_Region_Flag__c 
          )
        )
    )
    </formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Team Segment</label>
    <type>Checkbox</type>
</CustomField>