force-app/main/default/objects/Lead/fields/Registered_Company__c.field-meta.xml
<CustomField>
    <fullName>Registered_Company__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Select if company has not yet been registered</description>
    <inlineHelpText>Entity not yet registered for ABN/ACN</inlineHelpText>
    <label>Is this business registered?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>