force-app/main/default/objects/Lead/fields/Secondary_Customer_Needs__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Needs__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Allows bankers to store additional customer needs</description>
    <label>Secondary Customer Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__ProductList</valueSetName>
    </valueSet>
</CustomField>