force-app/main/default/objects/Lead/fields/Skip_Validations__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validations__c</fullName>
    <complianceGroup>Source - Salesforce;Privacy - Non Personal Information;Integrity - Trusted</complianceGroup>
    <description>This field is to Skip Validation Rules when updating records through Apex.</description>
    <label>Skip Validations</label>
    <length>20</length>
    <type>Text</type>
</CustomField>