force-app/main/default/objects/Lead/fields/SmartphoneOS__c.field-meta.xml
<CustomField>
    <fullName>SmartphoneOS__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information</complianceGroup>
    <description>To capture whether the prospect is interested in iOS or Android</description>
    <label>Smartphone OS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>