force-app/main/default/objects/Lead/fields/Soft_Delete__c.field-meta.xml
<CustomField>
    <fullName>Soft_Delete__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This field is used to soft delete lead records after certains days.</description>
    <formula>IF(
	OR(
		ISPICKVAL(Lead_Originator__c, &apos;UNICA&apos;),
		ISPICKVAL(Lead_Originator__c, &apos;Adobe&apos;)
	),
	IF(
		ISPICKVAL(Lead_Outcome__c, &apos;Expired&apos;),
		true,
		IF(
			AND(
				ISPICKVAL(Lead_Outcome__c, &apos;No Opportunity&apos;),
				DATEVALUE(LastModifiedDate) + 5 &lt; TODAY()
			),
			true,
			IF(
				AND(
					ISPICKVAL(Lead_Outcome__c, &apos;Referred&apos;),
					DATEVALUE(LastModifiedDate) + 60 &lt; TODAY()
				),
				true, false
			)
		)
	),
	IF(
		ISPICKVAL(Lead_Originator__c, &apos;CCRM&apos;),
		IF(
			AND(
				ISPICKVAL(Lead_Outcome__c, &apos;Expired&apos;),
				DATEVALUE(LastModifiedDate) + 365 &lt; TODAY()
			),
			true,
			IF(
				AND(
					ISPICKVAL(Lead_Outcome__c, &apos;No Opportunity&apos;),
					DATEVALUE(LastModifiedDate) + 365 &lt; TODAY()
				),
				true,
				IF(
					AND(
						ISPICKVAL(Lead_Outcome__c, &apos;Referred&apos;),
						DATEVALUE(LastModifiedDate) + 60 &lt; TODAY()
					),
					true, false
				)
			)
		), false
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soft Delete</label>
    <type>Checkbox</type>
</CustomField>