force-app/main/default/objects/Lead/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Source System Name of Party received from OCV (E.g. CAP)</description>
    <externalId>true</externalId>
    <label>Source System</label>
    <length>30</length>
    <type>Text</type>
</CustomField>