force-app/main/default/objects/Lead/fields/SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Source System Id of Party received from OCV</description>
    <externalId>true</externalId>
    <label>Source System Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>