force-app/main/default/objects/Lead/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Sub Status of the lead</description>
    <label>Lead Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>1st attempt made</fullName>
            </value>
            <value>
                <fullName>2nd attempt made</fullName>
            </value>
            <value>
                <fullName>3rd attempt made</fullName>
            </value>
            <value>
                <fullName>Follow up required</fullName>
            </value>
            <value>
                <fullName>Opportunity identified</fullName>
            </value>
            <value>
                <fullName>Referred to Classic</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Not contactable</fullName>
            </value>
            <value>
                <fullName>Auto-closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>