force-app/main/default/objects/Lead/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <complianceGroup>Privacy_Personal_Information;Source_Salesforce;Integrity - Accurate</complianceGroup>
    <description>Contact&apos;s role in Business</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Financial Controller</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>