force-app/main/default/objects/Lead/fields/UNICA_Treatment_Code__c.field-meta.xml
<CustomField>
    <fullName>UNICA_Treatment_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Not required to display in CRM UI but essential to send in response to UNICA.</description>
    <label>UNICA Treatment Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>