force-app/main/default/objects/Lead/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Work phone number</description>
    <inlineHelpText>Work Phone number needs to be in the format of +61 followed by 9 digits. Eg. +61312345678</inlineHelpText>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>