force-app/main/default/objects/Lead/recordTypes/ANZX_Leads.recordType-meta.xml
<RecordType>
    <fullName>ANZX_Leads</fullName>
    <active>true</active>
    <businessProcess>ANZX Leads</businessProcess>
    <label>ANZX Leads</label>
</RecordType>