force-app/main/default/objects/Lead/recordTypes/CCRM_Lead.recordType-meta.xml
<RecordType>
    <fullName>CCRM_Lead</fullName>
    <active>true</active>
    <businessProcess>CCRM Lead Process</businessProcess>
    <description>Create a new AR&amp;C commercial lead</description>
    <label>Commercial CRM Lead</label>
</RecordType>