force-app/main/default/objects/Lead/recordTypes/MLCRM_Lead.recordType-meta.xml
<RecordType>
    <fullName>MLCRM_Lead</fullName>
    <active>true</active>
    <businessProcess>ML CRM Lead Process</businessProcess>
    <label>Mobile Lending Lead</label>
</RecordType>