force-app/main/default/objects/Lead/recordTypes/Referral.recordType-meta.xml
<RecordType>
    <fullName>Referral</fullName>
    <active>true</active>
    <businessProcess>CCRM Lead Process</businessProcess>
    <description>Create a new commercial referral</description>
    <label>Referral</label>
</RecordType>