force-app/main/default/objects/Lead/validationRules/CCRM_Cannot_Edit_Cancelled_Referral.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Cannot_Edit_Cancelled_Referral</fullName>
    <active>true</active>
    <description>A cancelled referral record cannot be updated.</description>
    <errorConditionFormula>AND(
$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
RecordType.Name = &apos;Referral&apos;,
ISPICKVAL(PRIORVALUE( Referral_Status__c ),&quot;Cancelled&quot;),
OR($Profile.Name = &apos;ANZ CCRM Standard User&apos;,
NOT($Permission.Allow_Editing_Locked_and_Cancelled_Referrals))
)</errorConditionFormula>
    <errorMessage>A cancelled referral record cannot be updated.</errorMessage>
</ValidationRule>