force-app/main/default/objects/Lead/validationRules/CCRM_Cannot_Edit_Referred_Referral.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Cannot_Edit_Referred_Referral</fullName>
    <active>true</active>
    <description>A referred referral record cannot be updated.</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    RecordType.Name = &apos;Referral&apos;,
    NOT($Permission.Allow_Editing_Locked_and_Cancelled_Referrals),
    NOT(ISBLANK(External_Id__c)), 
    ISPICKVAL(Referral_Status__c, &quot;Referred&quot;)
)</errorConditionFormula>
    <errorMessage>A referred referral record cannot be updated.</errorMessage>
</ValidationRule>