force-app/main/default/objects/Lead/validationRules/CCRM_Company_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Company_Check</fullName>
    <active>true</active>
    <description>Company and Registered Company are Mandatory.</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    NOT($Permission.CCRM_Skip_Validation),
    NOT(CONTAINS( $User.Username,$Label.AdobeIntegrationUserName)),
    AND(
        TEXT(Entity_Type__c) != &apos;Individual&apos;,
        TEXT(Entity_Type__c) != &apos;Customer Lending Group&apos;
    ),
    NOT(FinServ__RelatedAccount__r.RecordType.DeveloperName = &apos;CLG&apos;),
    RecordType.DeveloperName = &apos;CCRM_Lead&apos;,
	OR(
		ISBLANK(Company), 
		ISPICKVAL(Registered_Company__c, &apos;&apos;)
	),
    NOT(
    AND(
    Text(Status) = &apos;Outcome&apos;,
    Text(Lead_Outcome__c) = &apos;Expired&apos;
    )
    ),
    NOT(ISCHANGED(RecordTypeId)),
    NOT(ISCHANGED(Skip_Validations__c)),
    NOT(
        AND(
            ISCHANGED(Skip_Validations__c),
            OR(
                Skip_Validations__c = &apos;SkipValidation&apos;,
                Skip_Validations__c = &apos;Validate&apos;
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>The Registered Company and Company name are required to proceed.</errorMessage>
</ValidationRule>