force-app/main/default/objects/Lead/validationRules/CCRM_ContactDetails_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_ContactDetails_Check</fullName>
    <active>true</active>
    <description>Validate if at-least one type of valid contact detail is mentioned.</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    NOT(CONTAINS( $User.Username,&apos;unica.integration@anzx.com&apos;)),
    RecordType.DeveloperName = &apos;CCRM_Lead&apos;, 
    NOT(
		AND(
			Text(Status) = &apos;Outcome&apos;,
            Text(Lead_Outcome__c) = &apos;Expired&apos;
		)
	),
    NOT(ISCHANGED(Skip_Validations__c)),
    NOT(
        AND(
            ISCHANGED(Skip_Validations__c),
            OR(
                Skip_Validations__c = &apos;SkipValidation&apos;,
                Skip_Validations__c = &apos;Validate&apos;
            )
        )
    ),
    NOT( AND( IsNew(), Skip_Validations__c = &apos;Clone&apos;)),
    ISBLANK( Email ) , 
    ISBLANK( MobilePhone ) , 
    ISBLANK( Home_Phone__c ) , 
    ISBLANK( Work_Phone__c )
)</errorConditionFormula>
    <errorMessage>At least one type of Contact method is required.</errorMessage>
</ValidationRule>