force-app/main/default/objects/Lead/validationRules/CCRM_Email_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Email_Check</fullName>
    <active>true</active>
    <description>Validation to check if Email value is provided in proper format.</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    RecordType.DeveloperName = &apos;CCRM_Lead&apos;,
    NOT ISBLANK( Email ) ,
    NOT REGEX( Email ,  $Label.Regex_Email ),
    NOT(ISCHANGED(Skip_Validations__c)),
    NOT(OR(
        Skip_Validations__c = &apos;SkipValidation&apos;,
        Skip_Validations__c = &apos;Validate&apos;
    ))
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please enter Email in correct format.</errorMessage>
</ValidationRule>