force-app/main/default/objects/Lead/validationRules/CCRM_Existing_Customer_Adobe_UNICA.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Existing_Customer_Adobe_UNICA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	$Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    RecordType.DeveloperName = &apos;CCRM_Lead&apos;,
		NOT(CONTAINS($User.Username,&apos;unica.integration@anzx.com&apos;)),
		NOT(CONTAINS($User.Username,&apos;adobe.integration@anzx.com&apos;)),
		NOT($Profile.Name = &apos;System Administrator&apos;),
	ISCHANGED(FinServ__RelatedAccount__c),
	NOT(ISBLANK(FinServ__RelatedAccount__c)),
	OR(
		ISPICKVAL(Lead_Originator__c, &apos;UNICA&apos;),
		ISPICKVAL(Lead_Originator__c, &apos;Adobe&apos;)
	),
	NOT(
		OR(
			ISPICKVAL(FinServ__RelatedAccount__r.FinServ__Status__c, &apos;Active&apos;),
			ISPICKVAL(FinServ__RelatedAccount__r.FinServ__Status__c, &apos;Prospect&apos;)
		)
	)
)</errorConditionFormula>
    <errorDisplayField>FinServ__RelatedAccount__c</errorDisplayField>
    <errorMessage>Only Customers with a Status of Active or Prospect can be linked as an Existing Customer.</errorMessage>
</ValidationRule>