force-app/main/default/objects/Lead/validationRules/CCRM_Existing_Customer_Check_For_CAP.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Existing_Customer_Check_For_CAP</fullName>
    <active>true</active>
    <description>When the user selects the &apos;Referral for an existing customer?&apos; field, the &apos;Existing Customer&apos; field appears and should be restricted to only customers with the source system &apos;CAP&apos;.</description>
    <errorConditionFormula>
    AND(
        $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
        $Profile.Name = &apos;ANZ CCRM Standard User&apos;,
        NOT(ISBLANK(FinServ__RelatedAccount__c)),
        FinServ__RelatedAccount__r.Source_System_Name__c  &lt;&gt; &apos;CAP-CIS&apos;,
        OR(
            RecordType.DeveloperName = &apos;CCRM_Lead&apos;,
            RecordType.DeveloperName = &apos;Referral&apos;
        ) 
    )
    </errorConditionFormula>
    <errorDisplayField>FinServ__RelatedAccount__c</errorDisplayField>
    <errorMessage>Unsupported customer profile selected. Please choose a valid CAP customer profile to proceed.</errorMessage>
</ValidationRule>