force-app/main/default/objects/Lead/validationRules/CCRM_Firstname_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Firstname_Check</fullName>
    <active>true</active>
    <description>CCRM Check if firstname is provided.  It is a mandatory field in source system.</description>
    <errorConditionFormula>AND(
        $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,NOT(CONTAINS( $User.Username,$Label.UnicaIntegrationUserName)),
NOT(CONTAINS( $User.Username,$Label.AdobeIntegrationUserName)),
        RecordType.DeveloperName = &apos;CCRM_Lead&apos;,Text(Status) != &apos;Outcome&apos;,Text(Lead_Outcome__c) != &apos;Expired&apos;,
        ISBLANK( FirstName ),
NOT(ISCHANGED(RecordTypeId)),
ISBLANK(FinServ__ReferredByUser__c)
    )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is a mandatory field.</errorMessage>
</ValidationRule>