force-app/main/default/objects/Lead/validationRules/CCRM_Followup_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Followup_Date_Check</fullName>
    <active>true</active>
    <description>Ensures that bankers can only set a follow-up date (Followup_Date__c) to a maximum of 30 days from the current date.</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
    NOT($Permission.CCRM_Skip_Validation),
				RecordType.DeveloperName = &apos;CCRM_Lead&apos;,
				Followup_Date__c &gt; (TODAY() + 30)
)</errorConditionFormula>
    <errorDisplayField>Followup_Date__c</errorDisplayField>
    <errorMessage>You cannot set a follow up date greater than 30 days from today.</errorMessage>
</ValidationRule>