force-app/main/default/objects/Lead/validationRules/CCRM_HomePhone_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_HomePhone_Check</fullName>
    <active>true</active>
    <description>Validation to check Home Phone is entered in a correct format.</description>
    <errorConditionFormula>AND(
    $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
NOT(CONTAINS( $User.Username,$Label.UnicaIntegrationUserName)),
NOT(CONTAINS( $User.Username,$Label.AdobeIntegrationUserName)),
NOT(CONTAINS( $User.Username,$Label.IknowToSfIntegrationUserName)),
    OR(
        AND(
            RecordType.DeveloperName = &apos;CCRM_Lead&apos;,
            NOT(
                AND(
                    Text(Status) = &apos;Outcome&apos;,
                    Text(Lead_Outcome__c) = &apos;Expired&apos;
                )
            ),
            NOT(ISCHANGED(Skip_Validations__c)),
            NOT(
                AND(
                    ISCHANGED(Skip_Validations__c),
                    OR(
                        Skip_Validations__c = &apos;SkipValidation&apos;,
                        Skip_Validations__c = &apos;Validate&apos;
                    )
                )
            )
        ),
        AND(RecordType.DeveloperName = &apos;MLCRM_Lead&apos;,Text(Status) != &apos;Expired&apos;, OR(ISNEW(),ISCHANGED(Home_Phone__c))),
        RecordType.DeveloperName = &apos;Referral&apos;
    ),
    NOT ISBLANK(  Home_Phone__c  ) ,
    NOT(ISCHANGED(RecordTypeId)),
    NOT REGEX( Home_Phone__c , &quot;^\\+61[0-9]{9}+$&quot; )
)</errorConditionFormula>
    <errorDisplayField>Home_Phone__c</errorDisplayField>
    <errorMessage>The Home Phone entered is not in the correct format. Refer to help text.</errorMessage>
</ValidationRule>