force-app/main/default/objects/Lead/validationRules/CCRM_Lead_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Lead_Not_Editable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
        RecordType.DeveloperName = &apos;CCRM_Lead&apos;,
        OR(
            ISPICKVAL(PRIORVALUE(Status), &quot;Completed&quot;),
            ISPICKVAL(PRIORVALUE(Status), &quot;Converted&quot;),
            ISPICKVAL(PRIORVALUE(Status), &quot;Referred&quot;),
            ISPICKVAL(PRIORVALUE(Status), &quot;Expired&quot;),
												OR(
																AND(
												       ISPICKVAL(PRIORVALUE(Status), &quot;Outcome&quot;),
									          ISPICKVAL(Lead_Outcome__c, &quot;Expired&quot;)
															),
									      AND(
												       ISPICKVAL(PRIORVALUE(Status), &quot;Outcome&quot;),
									          ISPICKVAL(Lead_Outcome__c, &quot;Referred&quot;)
															),
																AND(
												       ISPICKVAL(PRIORVALUE(Status), &quot;Outcome&quot;),
									          ISPICKVAL(Lead_Outcome__c, &quot;No Opportunity&quot;)
															)
										)

     )
)</errorConditionFormula>
    <errorMessage>Lead cannot be updated at this stage.</errorMessage>
</ValidationRule>