force-app/main/default/objects/Lead/validationRules/CCRM_Lead_Ownership_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_Lead_Ownership_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
        $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
        RecordType.DeveloperName = &apos;CCRM_Lead&apos;,
        $Profile.Name = &quot;ANZ CCRM Standard User&quot;,
        $User.Id !=  Owner:User.Id, 
        NOT(ISCHANGED( OwnerId ))
    )</errorConditionFormula>
    <errorMessage>You cannot update this Lead.</errorMessage>
</ValidationRule>