force-app/main/default/objects/Lead/validationRules/CCRM_LeadSource_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CCRM_LeadSource_Check</fullName>
    <active>true</active>
    <description>Validation to check Lead Source when creating or updating a lead.</description>
    <errorConditionFormula>AND(
        (ISCHANGED( LeadSource ) || ISNEW()),
        $Setup.Salesforce_Library_Settings__c.Disable_VRs__c = false,
        RecordType.DeveloperName = &apos;CCRM_Lead&apos;,
        TEXT(Lead_Originator__c) =  &apos;CCRM&apos; , 
        ISBLANK( TEXT(LeadSource) )
    )</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Lead Source is mandatory for manual leads</errorMessage>
</ValidationRule>